--- a/WebArMa.Ravino.Ravino.WebApp/Views/Home/Index.cshtml
+++ b/WebArMa.Ravino.Ravino.WebApp/Views/Home/Index.cshtml
@@ -51,7 +51,7 @@
     <div class="container d-flex flex-column-reverse flex-md-row overflow-hidden py-5">
         <div class="box d-block col-12 p-4 mb-5" data-aos="fade-left">
             <div class="title d-flex flex-column flex-md-row flex-wrap justify-content-between text-white pt-4">
-                <h3 class="font-iransans-black col-12 col-md-6 my-0">چرا ما؟</h3>
+                <h3 class="font-iransans-black col-12 col-md-6 my-0">اخبار</h3>
                 <span class="d-block font-iransans-bold col-12 col-md-6 lh-lg">
                     <div id="main-why-us-textToolbar"></div>
                     <div id="main-why-us-text">
