--- a/WebArMa.Ravino.Ravino.WebApp/Views/Home/Index.cshtml
+++ b/WebArMa.Ravino.Ravino.WebApp/Views/Home/Index.cshtml
@@ -122,7 +122,7 @@
 <section id="news" class="news position-relative alternate overflow-hidden py-5">
     <div class="container d-block">
         <div class="title d-flex flex-column flex-md-row flex-wrap justify-content-between pt-5 px-3">
-            <h3 class="line font-iransans-black col-12 col-md-6 my-0"> اخبار راوینو </h3>
+            <h3 class="line font-iransans-black col-12 col-md-6 my-0"> گزارش تصویری </h3>
         </div>
 
         <div class="shape-bg">
@@ -179,7 +179,7 @@
 
 <section id="portfolio" class="portfolio position-relative py-5">
     <div class="container d-block">
-        <h3 class="line d-block font-iransans-black"> نمونه کارهای من </h3>
+        <h3 class="line d-block font-iransans-black"> رویدادها </h3>
 
         <div class="button-group filters-button-group text-center my-5" hidden>
             <button type="button" class="btn btn-light rounded-5 mx-1" data-filter="*">همه</button>
