--- a/WebArMa.Ravino.Ravino.WebApp/Views/Shared/_Layout.cshtml
+++ b/WebArMa.Ravino.Ravino.WebApp/Views/Shared/_Layout.cshtml
@@ -67,10 +67,10 @@
                         <a class="nav-link @(ViewBag.Route == "Blog" ? "active" : "") lh-lg py-2 px-3" asp-controller="Blog" asp-action="Index">اخبار</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link @(ViewBag.Route == "" ? "active" : "") lh-lg py-2 px-3" href="#products">معاونت‌ها</a>
+                        <a class="nav-link @(ViewBag.Route == "" ? "active" : "") lh-lg py-2 px-3" href="#products">مراکز</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link @(ViewBag.Route == "" ? "active" : "") lh-lg py-2 px-3" href="#portfolio">رویداد‌ها</a>
+                        <a class="nav-link @(ViewBag.Route == "" ? "active" : "") lh-lg py-2 px-3" href="#portfolio">مرکز رویداد</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link @(ViewBag.Route == "" ? "active" : "") lh-lg py-2 px-3" href="#faq">پرسش‌های متداول</a>
