--- a/WebArMa.Ravino.Ravino.WebApp/Views/Home/Index.cshtml
+++ b/WebArMa.Ravino.Ravino.WebApp/Views/Home/Index.cshtml
@@ -406,53 +406,49 @@
             <ul class="list-unstyled px-0 mb-0">
                 <li class="py-2 px-3 mb-4">
                     <a class="link d-flex flex-row justify-content-between align-items-center" href="#" data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="false" aria-controls="collapse1">
-                        چگونه میتوانم ثبت سفارش کنم
+                        در صورت امکان راوینو را به صورت مختصر شرح دهید.
                         <i class="mdi mdi-chevron-down mdi-24px text-muted"></i>
                     </a>
                     <p id="collapse1" class="accordion-collapse collapse lh-lg mt-3" data-bs-parent="#accordionFaq">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با
-                        هدف بهبود ابزارهای کاربردی می باشد
+                        ایجاد ارتباط بین مصرف کنندگان ملی و بین المللی محتوا، یکی از اهداف راوینو در ایجاد بازار دائمی مصرف محتوا است تا به دو نگرانی همیشگی تولیدکنندگان محتوا پایان دهد. نخست، شناخت صحیح نیازها و ذائقه مصرف کنندگان حقیقی و اصلی محتوا و پس از آن نحوه ارتباط صحیح و موثر با آنها می‌باشد. اتصال شبکه‌های بین المللی عرضه محتوا به پلتفرم‌های مدیریت محتوای راوینو، این بازار دائمی را ایجاد خواهد نمود. خانواده بزرگ راوینو، منتظر حضور شماست
+
                     </p>
                 </li>
                 <li class="py-2 px-3 mb-4">
                     <a class="link d-flex flex-row justify-content-between align-items-center" href="#" data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="false" aria-controls="collapse2">
-                        چه محصولاتی شامل ضمانت می شوند
+                        راوینو تاکنون چه پویش هایی برگزار نموده است؟
                         <i class="mdi mdi-chevron-down mdi-24px text-muted"></i>
                     </a>
                     <p id="collapse2" class="accordion-collapse collapse lh-lg mt-3" data-bs-parent="#accordionFaq">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با
-                        هدف بهبود ابزارهای کاربردی می باشد
+                        ایجاد ارتباط بین مصرف کنندگان ملی و بین المللی محتوا، یکی از اهداف راوینو در ایجاد بازار دائمی مصرف محتوا است تا به دو نگرانی همیشگی تولیدکنندگان محتوا پایان دهد. نخست، شناخت صحیح نیازها و ذائقه مصرف کنندگان حقیقی و اصلی محتوا و پس از آن نحوه ارتباط صحیح و موثر با آنها می‌باشد. اتصال شبکه‌های بین المللی عرضه محتوا به پلتفرم‌های مدیریت محتوای راوینو، این بازار دائمی را ایجاد خواهد نمود. خانواده بزرگ راوینو، منتظر حضور شماست
                     </p>
                 </li>
                 <li class="py-2 px-3 mb-4">
                     <a class="link d-flex flex-row justify-content-between align-items-center" href="#" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                        از چه روشهایی میتوانم سفارش خود را پرداخت کنم
+                        مهمترین خدمات راوینو شامل چه مواردی می شود؟
                         <i class="mdi mdi-chevron-down mdi-24px text-muted"></i>
                     </a>
                     <p id="collapse3" class="accordion-collapse collapse lh-lg mt-3" data-bs-parent="#accordionFaq">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با
-                        هدف بهبود ابزارهای کاربردی می باشد
+                        ایجاد ارتباط بین مصرف کنندگان ملی و بین المللی محتوا، یکی از اهداف راوینو در ایجاد بازار دائمی مصرف محتوا است تا به دو نگرانی همیشگی تولیدکنندگان محتوا پایان دهد. نخست، شناخت صحیح نیازها و ذائقه مصرف کنندگان حقیقی و اصلی محتوا و پس از آن نحوه ارتباط صحیح و موثر با آنها می‌باشد. اتصال شبکه‌های بین المللی عرضه محتوا به پلتفرم‌های مدیریت محتوای راوینو، این بازار دائمی را ایجاد خواهد نمود. خانواده بزرگ راوینو، منتظر حضور شماست
+
                     </p>
                 </li>
                 <li class="py-2 px-3 mb-4">
                     <a class="link d-flex flex-row justify-content-between align-items-center" href="#" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapse4">
-                        چطور میتوانم کد تخفیف دریافت کنم
+                        مزیت های رقابتی راوینو چیست؟
                         <i class="mdi mdi-chevron-down mdi-24px text-muted"></i>
                     </a>
                     <p id="collapse4" class="accordion-collapse collapse lh-lg mt-3" data-bs-parent="#accordionFaq">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با
-                        هدف بهبود ابزارهای کاربردی می باشد
+                        ایجاد ارتباط بین مصرف کنندگان ملی و بین المللی محتوا، یکی از اهداف راوینو در ایجاد بازار دائمی مصرف محتوا است تا به دو نگرانی همیشگی تولیدکنندگان محتوا پایان دهد. نخست، شناخت صحیح نیازها و ذائقه مصرف کنندگان حقیقی و اصلی محتوا و پس از آن نحوه ارتباط صحیح و موثر با آنها می‌باشد. اتصال شبکه‌های بین المللی عرضه محتوا به پلتفرم‌های مدیریت محتوای راوینو، این بازار دائمی را ایجاد خواهد نمود. خانواده بزرگ راوینو، منتظر حضور شماست
                     </p>
                 </li>
                 <li class="py-2 px-3 mb-4">
                     <a class="link d-flex flex-row justify-content-between align-items-center" href="#" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapse5">
-                        چطور میتوانم از کارت هدیه استفاده کنم
+                        چطور می توانم در پویش ها شرکت کنم؟
                         <i class="mdi mdi-chevron-down mdi-24px text-muted"></i>
                     </a>
                     <p id="collapse5" class="accordion-collapse collapse lh-lg mt-3" data-bs-parent="#accordionFaq">
-                        لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با
-                        هدف بهبود ابزارهای کاربردی می باشد لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی
-                        تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد
+                        ایجاد ارتباط بین مصرف کنندگان ملی و بین المللی محتوا، یکی از اهداف راوینو در ایجاد بازار دائمی مصرف محتوا است تا به دو نگرانی همیشگی تولیدکنندگان محتوا پایان دهد. نخست، شناخت صحیح نیازها و ذائقه مصرف کنندگان حقیقی و اصلی محتوا و پس از آن نحوه ارتباط صحیح و موثر با آنها می‌باشد. اتصال شبکه‌های بین المللی عرضه محتوا به پلتفرم‌های مدیریت محتوای راوینو، این بازار دائمی را ایجاد خواهد نمود. خانواده بزرگ راوینو، منتظر حضور شماست
                     </p>
                 </li>
             </ul>
